--- a/index.html
+++ b/index.html
@@ -565,8 +565,12 @@
   </section>
   <div class="copyright">
     <span class="copyright-text">
-      <i class="fas fa-copyright"></i> 2021 Clinic - All right reserved
+      <i class="fas fa-copyright"></i> 2021 <a href="https://dribbble.com/shots/14472822-Clinic-Landing-Page"
+        class="copyright-link">Clinic</a>
+      - All right reserved
     </span>
+    <span class="copyright-design">Designed by <a href="https://dribbble.com/OmerErdgn" class="copyright-link">Omer
+        Erdagon</a></span>
   </div>
 </footer>
 
